--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example.springboot</groupId>
-	<artifactId>WebBiginnerMaven</artifactId>
+	<artifactId>SpringBootDrill</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>WebBiginnerMaven</name>
+	<name>SpringBootDrill</name>
 	<description>sample project for Spring Boot</description>
 
 	<properties>
